# adb-remote-control

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
adbtvremote/: app.py
