[project]
name = "adbtvremote"
version = "0.1.3"
authors = [
  { name = "DanVerse" }
]
description = "Minimal Android TV remote over ADB (WiFi), works on PC and Pydroid"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "customtkinter",
  "adb-shell"
]
keywords = ["adb", "android-tv", "remote", "wifi", "pydroid"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

license = "MIT"

[project.urls]
Homepage = "https://github.com/DanVerseDev/adbtvremote"
Issues = "https://github.com/DanVerseDev/adbtvremote/issues"

[project.scripts]
adbtvremote = "adbtvremote.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
